Revert "Implemented socket change of view (setup-gameplay). Implementing GameplayTUI."
This reverts commit 467e9573701ee570f172d5a6fc9216a716a1fce6.